# smtp-codec

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  justfile
smtp-codec/: Cargo.toml  README.md
smtp-codec/fuzz/: Cargo.toml  terminals.dict
smtp-codec/fuzz/fuzz_targets/: command.rs  command_to_bytes_and_back.rs  greeting.rs  greeting_to_bytes_and_back.rs  response.rs  response_to_bytes_and_back.rs
smtp-codec/fuzz/src/: lib.rs
smtp-codec/src/: auth.rs  codec.rs  command.rs  core.rs  lib.rs  response.rs
smtp-codec/src/codec/: decode.rs  encode.rs
smtp-types/: Cargo.toml  README.md
smtp-types/src/: auth.rs  command.rs  core.rs  lib.rs  response.rs  secret.rs  state.rs  utils.rs
